// <auto-generated />
using System;
using DevXpert.Academy.Alunos.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace DevXpert.Academy.Alunos.Data.Migrations
{
    [DbContext(typeof(AlunosContext))]
    partial class AlunosContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "8.0.11");

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Alunos.Aluno", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<DateTime?>("DataHoraAlteracao")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("DataHoraCriacao")
                        .HasColumnType("TEXT");

                    b.Property<string>("Nome")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("Alunos", (string)null);
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Alunos.AulaConcluida", b =>
                {
                    b.Property<Guid>("AlunoId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("CursoId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("AulaId")
                        .HasColumnType("TEXT");

                    b.Property<DateTime?>("DataHoraAlteracao")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("DataHoraConclusao")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("DataHoraCriacao")
                        .HasColumnType("TEXT");

                    b.HasKey("AlunoId", "CursoId", "AulaId");

                    b.ToTable("AlunosAulasConcluidas", (string)null);
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Alunos.Matricula", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("AlunoId")
                        .HasColumnType("TEXT");

                    b.Property<bool>("Ativa")
                        .HasColumnType("INTEGER");

                    b.Property<bool>("Concluido")
                        .HasColumnType("INTEGER");

                    b.Property<Guid>("CursoId")
                        .HasColumnType("TEXT");

                    b.Property<DateTime?>("DataHoraAlteracao")
                        .HasColumnType("TEXT");

                    b.Property<DateTime?>("DataHoraConclusaoDoCurso")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("DataHoraCriacao")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("AlunoId");

                    b.HasIndex("CursoId");

                    b.ToTable("Matriculas", (string)null);
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Cursos.Curso", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<bool>("Ativo")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime?>("DataHoraAlteracao")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("DataHoraCriacao")
                        .HasColumnType("TEXT");

                    b.Property<string>("Titulo")
                        .HasColumnType("TEXT");

                    b.Property<decimal>("Valor")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("Cursos", (string)null);
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Alunos.AulaConcluida", b =>
                {
                    b.HasOne("DevXpert.Academy.Alunos.Domain.Alunos.Aluno", "Aluno")
                        .WithMany("AulasConcluidas")
                        .HasForeignKey("AlunoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Aluno");
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Alunos.Matricula", b =>
                {
                    b.HasOne("DevXpert.Academy.Alunos.Domain.Alunos.Aluno", "Aluno")
                        .WithMany("Matriculas")
                        .HasForeignKey("AlunoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("DevXpert.Academy.Alunos.Domain.Cursos.Curso", "Curso")
                        .WithMany("Matriculas")
                        .HasForeignKey("CursoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.OwnsOne("DevXpert.Academy.Alunos.Domain.Alunos.ValuesObjects.Certificado", "Certificado", b1 =>
                        {
                            b1.Property<Guid>("MatriculaId")
                                .HasColumnType("TEXT");

                            b1.Property<string>("CertificadoUrl")
                                .HasColumnType("TEXT")
                                .HasColumnName("CertificadoUrl");

                            b1.Property<DateTime>("DataHoraEmissao")
                                .HasColumnType("TEXT")
                                .HasColumnName("DataHoraEmissao");

                            b1.HasKey("MatriculaId");

                            b1.ToTable("Matriculas");

                            b1.WithOwner()
                                .HasForeignKey("MatriculaId");
                        });

                    b.Navigation("Aluno");

                    b.Navigation("Certificado");

                    b.Navigation("Curso");
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Cursos.Curso", b =>
                {
                    b.OwnsMany("DevXpert.Academy.Alunos.Domain.Cursos.Aula", "Aulas", b1 =>
                        {
                            b1.Property<Guid>("Id")
                                .HasColumnType("TEXT");

                            b1.Property<Guid>("CursoId")
                                .HasColumnType("TEXT");

                            b1.Property<DateTime?>("DataHoraAlteracao")
                                .HasColumnType("TEXT");

                            b1.Property<DateTime>("DataHoraCriacao")
                                .HasColumnType("TEXT");

                            b1.HasKey("Id");

                            b1.HasIndex("CursoId");

                            b1.ToTable("CursosAulas", (string)null);

                            b1.WithOwner()
                                .HasForeignKey("CursoId");
                        });

                    b.Navigation("Aulas");
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Alunos.Aluno", b =>
                {
                    b.Navigation("AulasConcluidas");

                    b.Navigation("Matriculas");
                });

            modelBuilder.Entity("DevXpert.Academy.Alunos.Domain.Cursos.Curso", b =>
                {
                    b.Navigation("Matriculas");
                });
#pragma warning restore 612, 618
        }
    }
}
