using System;

namespace DevXpert.Academy.Alunos.Domain.Alunos.ValuesObjects
{
    public sealed record Certificado(string CertificadoUrl, DateTime DataHoraEmissao);
}
