@startuml Dominio
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Container.puml

!theme sketchy-outline
skinparam BackgroundColor #FBEBCD
skinparam StateFontColor black
skinparam ArrowFontColor black

package "Domínio" {
    class Aluno {
        + id
        + nome
        + email
        + senha
        + Matriculas[]
        + AulasConcluidas[]
        + cadastrar()
    }

    class Curso {
        + id
        + titulo
        + descricao
        + cargaHoraria
        + valor
        + ativo
        + Aulas[]
    }

    class Aula {
        + id
        + Curso
        + titulo
        + videoUrl
    }

    class Matricula {
        + id
        + Aluno aluno
        + Curso curso
        + dataHoraConclusaoDoCurso
        + ativa
        + concluido
        + Certificado
        + ativar()
        + bloquear()
        + emitirCertificado()
    }

    class Pagamento {
        + id
        + Matricula matricula
        + valor
        + dadosDoCartao
        + situacao
        + processarPagamento()
    }

    class AulaConcluida {
        + Aluno
        + Curso
        + Aula
        + dataHoraConclusao
    }

    class Certificado {
        + url
        + dataHoraEmissao
    }

    enum SituacaoDoPagamento {
        PENDENTE
        APROVADO
        RECUSADO,
        ESTORNADO,
        CANCELADO
    }

    Aluno "1" -- "0..*" Matricula : se_matricula
    Aluno "1" -- "0..*" AulaConcluida : registra
    Curso "1" -- "1..*" Aula : tem
    Matricula "1" -- "1" Curso : tem
    Matricula "1" -- "1" Pagamento : tem
    AulaConcluida "1" -- "1" Aula : referencia
    Matricula "1" -- "1" Certificado : gera
}
@enduml